--- a/deployment/kubernetes/middleware/kibana/kibana.yml
+++ b/deployment/kubernetes/middleware/kibana/kibana.yml
@@ -66,7 +66,7 @@ spec:
         lilishop.service: kibana
     spec:
       containers:
-        - image: docker.elastic.co/kibana/kibana:7.17.5
+        - image: pubrepo.jiagouyun.com/demo/demo-lilishop-kibana:7.17.5
           name: kibana
           env:
             - name: TZ
