--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -29,12 +29,15 @@ jobs:
           restore-keys: |
             Linux-java-
 
-      - name: Log in to the Docker registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ vars.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#      - name: Log in to the Docker registry
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ${{ vars.DOCKER_REGISTRY }}
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Build with Maven
-        run: cd ./src/lilishop && mvn clean package docker:build  -DskipTests  -DpushImage
+        run: |
+         cd ./src/lilishop
+         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+         mvn clean package docker:build  -DskipTests  -DpushImage
