--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -39,4 +39,4 @@ jobs:
       - name: Build with Maven
         run: |
          cd ./src/lilishop
-         mvn clean package docker:build  -DskipTests  -DpushImage  -Ddocker.username=${{ secrets.DOCKER_USERNAME }} -Ddocker.password=${{ secrets.DOCKER_PASSWORD }}
+         mvn clean package docker:build  -DskipTests  -DpushImage  -Ddocker.registry=${{ vars.DOCKER_REGISTRY }}/demo/ -Ddocker.username=${{ secrets.DOCKER_USERNAME }} -Ddocker.password=${{ secrets.DOCKER_PASSWORD }}
