--- a/src/lilishop/pom.xml
+++ b/src/lilishop/pom.xml
@@ -90,7 +90,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>${spotify}</version>
                 <configuration>
-                    <imageName>${docker-registry}/demo/demo-lilishop-${project.artifactId}:${revision}.${images-version}</imageName>
+                    <imageName>${docker.registry}/demo-lilishop-${project.artifactId}:${revision}.${images-version}</imageName>
                     <username>${docker.username}</username>
                     <password>${docker.password}</password>
                     <baseImage>eclipse-temurin:8u382-b05-jre</baseImage>
