--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -38,5 +38,7 @@ jobs:
           
       - name: Build with Maven
         run: |
+         sudo apt install containerd
+         sudo apt install docker.io
          cd ./src/lilishop
          mvn clean package docker:build  -DskipTests  -DpushImage  -Ddocker.registry=${{ vars.DOCKER_REGISTRY }}/demo/ -Ddocker.username=${{ secrets.DOCKER_USERNAME }} -Ddocker.password=${{ secrets.DOCKER_PASSWORD }}
