--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -14,9 +14,10 @@ jobs:
 
     steps:
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: '11'
+          maven-version: '3.8.4'
 
       - name: Checkout code
         uses: actions/checkout@v3
