--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -14,10 +14,9 @@ jobs:
 
     steps:
       - name: Set up Java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v1
         with:
-          java-version: '11'
-          maven-version: '3.8.4'
+          java-version: 11
 
       - name: Checkout code
         uses: actions/checkout@v3
@@ -30,17 +29,15 @@ jobs:
           restore-keys: |
             Linux-java-
 
-#      - name: Log in to the Docker registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ${{ vars.DOCKER_REGISTRY }}
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to the Docker registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ vars.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Build with Maven
         run: |
-         mvn --version
          cd ./src/lilishop
-#         sudo apt install containerd
-#         sudo apt install docker.io
-#         mvn clean package docker:build  -DskipTests  -DpushImage  -Ddocker.registry=${{ vars.DOCKER_REGISTRY }}/demo/ -Ddocker.username=${{ secrets.DOCKER_USERNAME }} -Ddocker.password=${{ secrets.DOCKER_PASSWORD }}
+         mvn clean package docker:build  -DskipTests  -DpushImage
+#  -Ddocker.registry=${{ vars.DOCKER_REGISTRY }}/demo/ -Ddocker.username=${{ secrets.DOCKER_USERNAME }} -Ddocker.password=${{ secrets.DOCKER_PASSWORD }}
