--- a/src/lilishop/pom.xml
+++ b/src/lilishop/pom.xml
@@ -90,9 +90,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>${spotify}</version>
                 <configuration>
-                    <imageName>${docker.registry}/demo-lilishop-${project.artifactId}:${revision}.${images-version}</imageName>
-                    <username>${docker.username}</username>
-                    <password>${docker.password}</password>
+                    <imageName>${docker-registry}/demo/demo-lilishop-${project.artifactId}:${revision}.${images-version}</imageName>
                     <baseImage>eclipse-temurin:8u382-b05-jre</baseImage>
                     <entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
                     <resources>
