--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -14,9 +14,7 @@ jobs:
 
     steps:
       - name: Set up Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
+        uses: actions/setup-java@v3.13.0
 
       - name: Checkout code
         uses: actions/checkout@v3
@@ -39,6 +37,7 @@ jobs:
       - name: Build with Maven
         run: |
          cd ./src/lilishop
+         mvn -version
          docker login pubrepo.jiagouyun.com -u${{ secrets.DOCKER_USERNAME }} -p${{ secrets.DOCKER_PASSWORD }}
          mvn clean package docker:build  -DskipTests  -DpushImage
 #  -Ddocker.registry=${{ vars.DOCKER_REGISTRY }}/demo/ -Ddocker.username=${{ secrets.DOCKER_USERNAME }} -Ddocker.password=${{ secrets.DOCKER_PASSWORD }}
