--- a/src/lilishop/pom.xml
+++ b/src/lilishop/pom.xml
@@ -69,13 +69,13 @@
 
     <modules>
         <module>framework</module>
-        <module>buyer-api</module>
+<!--        <module>buyer-api</module>
         <module>manager-api</module>
         <module>seller-api</module>
         <module>common-api</module>
         <module>consumer</module>
         <module>admin</module>
-        <module>im-api</module>
+        <module>im-api</module> -->
     </modules>
 
     <build>
