--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Set up Java
         uses: actions/setup-java@v3.13.0
+        with:
+          java-version: "1.8"
 
       - name: Checkout code
         uses: actions/checkout@v3
