--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-java@v3.13.0
         with:
           java-version: "1.8"
-          distribution: "openjdk"
+          distribution: "adopt"
 
       - name: Checkout code
         uses: actions/checkout@v3
