--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -30,17 +30,14 @@ jobs:
           restore-keys: |
             Linux-java-
 
-#      - name: Log in to the Docker registry
-#        uses: docker/login-action@v2
-#        with:
-#          registry: ${{ vars.DOCKER_REGISTRY }}
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to the Docker registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ vars.DOCKER_REGISTRY }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Build with Maven
         run: |
          cd ./src/lilishop
-         mvn -version
-         docker login pubrepo.jiagouyun.com -u${{ secrets.DOCKER_USERNAME }} -p${{ secrets.DOCKER_PASSWORD }}
          mvn clean package docker:build  -DskipTests  -DpushImage
-#  -Ddocker.registry=${{ vars.DOCKER_REGISTRY }}/demo/ -Ddocker.username=${{ secrets.DOCKER_USERNAME }} -Ddocker.password=${{ secrets.DOCKER_PASSWORD }}
