--- a/.github/workflows/build-java-images.yml
+++ b/.github/workflows/build-java-images.yml
@@ -29,15 +29,9 @@ jobs:
           key: Linux-java-0708c922d4bf4dab90192af21a5e94f25f35379430c7d269d18c20fe0d77
           restore-keys: |
             Linux-java-
-
-      - name: Log in to the Docker registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ vars.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Build with Maven
         run: |
          cd ./src/lilishop
+         docker login pubrepo.jiagouyun.com -u${{ secrets.DOCKER_USERNAME }} -p${{ secrets.DOCKER_PASSWORD }}
          mvn clean package docker:build  -DskipTests  -DpushImage
